recursively bind id reference, scrollbar plugin to prevent overlapping

--- a/app/style/global.sass
+++ b/app/style/global.sass
@@ -144,10 +144,8 @@ article.thread, #hoverBox
     padding-left: 0
     .contentSection
       padding: 0
-  & > .contentSection
-    padding: 0 0 1em 1em
-    section.mainContent
-      padding: 0
+      .mainContent
+        padding-left: 1em
   .quotedArticle p.quotedList
     display: inline-block
   .replyBox
